fix overflow

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -7,6 +7,7 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  z-index: 2;
 }
 .bghome {
   position: absolute;
@@ -203,11 +204,19 @@
 @media (min-width: 601px) {
   .bghome{
     margin-left: -20px;
-    height: 300px;
+    height: 400px;
     width: 576px;
+    overflow: hidden;
   }
   .bghome img{
     width: 576px !important;
     height: auto;
+    z-index: 0;
+  }
+  .main {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    z-index: 10;
   }
 }
